--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1> WorkShop UF2 </h1>
-    <form action="../src/View/ViewReparation.php">
+    <form action="../src/View/ViewReparation.php" method="GET">
         <select name="puesto" id="">
             <option value="employer">Employer</option>
             <option value="client">Client</option>
